--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
       <div class="team_cheer_box">
         <div class="mypostingbox" id="postingbox">
           <div class="form-floating mb-3">
-            <input type="email" class="formControl" id="image" placeholder="응원의 한 마디">
+            <input type="email" class="formControl" id="comment" placeholder="응원의 한 마디">
             <label for="floatingInput"></label>
           </div>
           <button id="postingbtn" type="button">기록하기</button>
@@ -170,76 +170,76 @@
 
     <div class="updirection btn_top" id="btn_top">
       <img src="images/updirection.png">
-  </div>
+    </div>
 
 
-  <script>
+    <script>
 
-//위로가기 버튼 클릭하면 위로 올라가게 하기 
-    $('.btn_top').click(function(){
-            event.preventDefault();
-    
-            $("html,body").stop().animate({scrollTop:0});
-            });
+      //위로가기 버튼 클릭하면 위로 올라가게 하기 
+      $('.btn_top').click(function () {
+        event.preventDefault();
 
-// 위로 특정 부분에서 보이게 하고 특정부분에서 보이지 않게 하기 
-            $(window).scroll(function(){ 
-        if ($(document).scrollTop() >= 1134 && $(document).scrollTop() <= 20000){  
-          $('#btn_top').fadeIn(); 
+        $("html,body").stop().animate({ scrollTop: 0 });
+      });
+
+      // 위로 특정 부분에서 보이게 하고 특정부분에서 보이지 않게 하기 
+      $(window).scroll(function () {
+        if ($(document).scrollTop() >= 1134 && $(document).scrollTop() <= 20000) {
+          $('#btn_top').fadeIn();
         }
         else {
           $('#btn_top').fadeOut();
-        } 
+        }
       })//window scroll
-  
-
-        </script>
 
 
-<script type="module">
-  // Firebase SDK 라이브러리 가져오기
-  import { initializeApp } from "https://www.gstatic.com/firebasejs/9.22.0/firebase-app.js";
-  import { getFirestore } from "https://www.gstatic.com/firebasejs/9.22.0/firebase-firestore.js";
-  import { collection, addDoc } from "https://www.gstatic.com/firebasejs/9.22.0/firebase-firestore.js";
-  import { getDocs } from "https://www.gstatic.com/firebasejs/9.22.0/firebase-firestore.js";
+    </script>
 
 
-  // For Firebase JS SDK v7.20.0 and later, measurementId is optional
-  const firebaseConfig = {
-      apiKey: "AIzaSyB7t1qKHUjDWbnN3vs8oDIalQyZpWkxQPs",
-      authDomain: "sparta-4434f.firebaseapp.com",
-      projectId: "sparta-4434f",
-      storageBucket: "sparta-4434f.appspot.com",
-      messagingSenderId: "729932088012",
-      appId: "1:729932088012:web:6a89d4fcbdc7aa6e47f869",
-      measurementId: "G-EZ3P5NVH4M"
+    <script type="module">
+      // Firebase SDK 라이브러리 가져오기
+      import { initializeApp } from "https://www.gstatic.com/firebasejs/9.22.0/firebase-app.js";
+      import { getFirestore } from "https://www.gstatic.com/firebasejs/9.22.0/firebase-firestore.js";
+      import { collection, addDoc } from "https://www.gstatic.com/firebasejs/9.22.0/firebase-firestore.js";
+      import { getDocs } from "https://www.gstatic.com/firebasejs/9.22.0/firebase-firestore.js";
 
-  };
 
-  // Firebase 인스턴스 초기화
-  const app = initializeApp(firebaseConfig);
-  const db = getFirestore(app);
-
-  $("#postingbtn").click(async function () {
-      let comment = $("#comment").val();
-
-      let doc = {
-          'comment': comment
+      // For Firebase JS SDK v7.20.0 and later, measurementId is optional
+      const firebaseConfig = {
+        apiKey: "AIzaSyB7t1qKHUjDWbnN3vs8oDIalQyZpWkxQPs",
+        authDomain: "sparta-4434f.firebaseapp.com",
+        projectId: "sparta-4434f",
+        storageBucket: "sparta-4434f.appspot.com",
+        messagingSenderId: "729932088012",
+        appId: "1:729932088012:web:6a89d4fcbdc7aa6e47f869",
+        measurementId: "G-EZ3P5NVH4M"
 
       };
-      await addDoc(collection(db, "comment"), doc);
-      alert('저장 완료!');
-      window.location.reload();
-  })
+
+      // Firebase 인스턴스 초기화
+      const app = initializeApp(firebaseConfig);
+      const db = getFirestore(app);
+
+      $("#postingbtn").click(async function () {
+        let comment = $("#comment").val();
+
+        let doc = {
+          'comment': comment
+
+        };
+        await addDoc(collection(db, "comment"), doc);
+        alert('저장 완료!');
+        window.location.reload();
+      })
 
 
-  let docs = await getDocs(collection(db, "comment"));
-  docs.forEach((doc) => {
-      let row = doc.data();
+      let docs = await getDocs(collection(db, "comment"));
+      docs.forEach((doc) => {
+        let row = doc.data();
 
-      let comment = row['comment']
+        let comment = row['comment']
 
-      let temp_html = `<div class="col">
+        let temp_html = `<div class="col">
                   <div class="card h-100">
                       <div class="card-body">
                           <h5 class="card-title">${comment}</h5>
@@ -247,10 +247,10 @@
                   </div>
               </div>`
 
-      $('#card').append(temp_html);
+        $('#card').append(temp_html);
 
-  })
-</script>
+      })
+    </script>
 </body>
 
 </html>
