--- a/sub_heechan.html
+++ b/sub_heechan.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="viewport" content="width=1920">
     <link rel="stylesheet" href="css/sub_style.css">
-    <title>새싹의 반란</title>
+    <title>새싹의 반란 킹왕짱 </title>
     <script src="https://code.jquery.com/jquery-3.7.1.min.js"
         integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
 </head>
