브랜치 생성

--- a/index.html
+++ b/index.html
@@ -68,19 +68,7 @@
     </section>
     <section id="team_member">
       <div class="container marketing">
-        <!--<div class="row featurette">
-              <div class="col-md-7 align-self-center">
-                  <div class="team_member_box_right">
-                      <h2 class="my_title">"미래의 떳떳한 개발자가 될"</h2>
-                      <p class="my_name">김희찬이에요</p>
-                      <button class="mybutton">프로필 자세히 보기</button>
-                  </div>
 
-              </div>
-              <div class="col-md-5 my_content">
-                  <img src="images/image_1.png" class="my_image">
-              </div>
-          </div> -->
 
         <div class="row featurette">
           <div class="col-md-7 order-md-2 align-self-center my_content">
@@ -112,7 +100,7 @@
           <div class="col-md-7 order-md-2 align-self-center my_content">
             <div class="team_member_box">
               <h2 class="my_title">"미래의 떳떳한 개발자가 될"</h2>
-              <p class="my_name">이다원이에요</p>
+              <p class="my_name">이다원이에요!!</p>
               <button class="mybutton"><a href="sub_dawon.html">프로필 자세히 보기</a></button>
             </div>
           </div>
