--- a/sub_youngho.html
+++ b/sub_youngho.html
@@ -49,7 +49,7 @@
             <span>ISTP</span>
             <div>
                 <p>물건 고치기</p>
-                <p>친구랑 놀기를 좋아해요 : )</p>
+                <p>친구랑 놀기를 좋아해요. : )</p>
             </div>
         </div>
     </div>
