--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
         <div class="row featurette">
           <div class="col-md-7 align-self-center my_content">
             <div class="team_member_box_right">
-              <h2 class="my_title">"미래의 떳떳한 개발자가 될"</h2>
+              <h2 class="my_title">"미래의 떳떳하고 멋진 개발자가 될"</h2>
               <p class="my_name">여인준이에요</p>
               <button class="mybutton"><a href="sub_injun.html">프로필 자세히 보기</a></button>
             </div>
@@ -209,18 +209,18 @@
         })
       }
 
-      $(window).scroll(function () { 
+      $(window).scroll(function () {
         var scrollAll = document.querySelector('html').scrollTop;
-        var clientAll =  document.querySelector('html').clientHeight
+        var clientAll = document.querySelector('html').clientHeight
         var scrollH = document.querySelector('html').scrollHeight
-        
-        if (scrollAll + clientAll  >= scrollH - 464) {
+
+        if (scrollAll + clientAll >= scrollH - 464) {
           $('#btn_top2').fadeIn();
         }
         else {
           $('#btn_top2').fadeOut();
         }
-        
+
 
       })
 
