--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
         <div class="row featurette">
           <div class="col-md-7 align-self-center">
             <div class="team_member_box_right">
-              <h2 class="my_title">"미래의 떳떳한 개발자가 될"</h2>
+              <h2 class="my_title">"미래의 당당한 개발자가 될"</h2>
               <p class="my_name">진영호이에요</p>
               <button class="mybutton"><a href="sub_youngho.html">프로필 자세히 보기</a></button>
             </div>
