--- a/sub_youngho.html
+++ b/sub_youngho.html
@@ -18,7 +18,7 @@
     <div style="cursor:pointer" class="updirection btn_top" id="btn_top">
         <img src="images/updirection.png">
     </div>
-    
+
     <div class="updirection2 btn_top2" id="btn_top2">
         <img src="images/updirection_white.png">
     </div>
@@ -73,8 +73,7 @@
 
             </div>
         </div>
-        <p class="point_txt">뭐 저의 장점은 이렇게 돼서 이러한 삶을 살아가고 있다가 코딩에 눈을 떠서 캠프를</p>
-        <p class="point_txt">시작하고 이러한 장점이 캠프에 도움이 되고 좋은 개발자가 되고 싶어요</p>
+        <p class="point_txt">다양한 경험을 해서 좋은 개발자가 되고싶어요!</p>
     </section>
 
 
@@ -129,7 +128,7 @@
             }
         })//window scroll
 
-        
+
 
 
     </script>
